# ai-ci-failure-analyzer

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: python.yaml
ai_ci_analyzer/: __init__.py  analyzer.py  cli.py  models.py  parser.py  patterns.py  reporter.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_models.py  test_parser.py  test_patterns.py  test_reporter.py
