[project]
name = "ai-ci-failure-analyzer"
version = "1.0.0"
description = "AI-powered CI failure analysis tool using pattern matching"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "A"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
